--- a/index.html
+++ b/index.html
@@ -417,7 +417,7 @@ ul.byline li + li {
 <section id="_about_me"><h2>About me</h2><div class="slide-content"><div class="ulist"><ul><li class="fragment"><p>breaking things in Scala for 7+ years</p></li><li class="fragment"><p>breaking things for money for 10 years</p></li><li class="fragment"><p>breaking things for fun for 18(?) years</p></li><li class="fragment"><p>a little bit of open source</p></li><li class="fragment"><p>blog at <a href="https://kubuszok.com">Kubuszok.com</a></p></li><li class="fragment"><p>niche <a href="https://leanpub.com/jvm-scala-book">Things you need to know about JVM (that matter in Scala)</a> ebook</p></li></ul></div>
 <aside class="notes"><div class="paragraph"><p>Every presentation should start with some excuse, why you even are here</p></div></aside></div></section>
 <section id="_agenda"><h2>Agenda</h2><div class="slide-content"><div class="ulist"><ul><li class="fragment"><p>a (de)motivating example</p></li><li class="fragment"><p>more examples from history</p></li><li class="fragment"><p>pattern?</p></li><li class="fragment"><p>what can we do about it</p></li></ul></div></div></section>
-<section><section id="_a_demotivating_example"><h2>A (de)motivating example</h2></section><section id="_my_idea"><h2>My idea</h2><div class="slide-content"><div class="ulist"><ul><li class="fragment"><p>OSS clone of Reddit</p></li><li class="fragment"><p>Scala 2.13</p></li><li class="fragment"><p>Cats + Cats Effect 2 + FS2 + Http4s</p></li><li class="fragment"><p>Monix as IO, TaskLocal for MDC</p></li><li class="fragment"><p>Tapir</p></li><li class="fragment"><p>Jsoniter</p></li><li class="fragment"><p>Scala Newtype</p></li></ul></div></div></section><section><div class="slide-content"><div class="ulist"><ul><li class="fragment"><p>March 2021 - last commit</p></li><li class="fragment"><p>everything works</p></li><li class="fragment"><p>September 2022 - updated depndencies</p></li><li class="fragment"><p>migration took about 2-3 weeks</p></li></ul></div></div></section><section id="_why"><h2>Why?</h2></section><section id="_cats_effect_2_to_3"><h2>Cats Effect 2 to 3</h2><div class="slide-content"><div class="ulist"><ul><li><p>revamp type class hierarchy, e.g. <code>ConcurrentEffect</code>, <code>ContextShift</code> disappeared</p></li><li><p><code>unsafe</code> operations (occasionally needed) are now run differently (require implicit)</p></li><li><p>forced updated of libraries which depended on CE: FS2, Http4s, Doobie</p></li><li><p>there is no Monix for Cats Effect 3 ATM</p></li></ul></div></div></section><section><div class="slide-content"><div class="listingblock"><div class="content"><pre class="highlightjs highlight"><code class="language-scala hljs" data-noescape="true" data-lang="scala">def myModule[F[_] : ConcurrentEffect
+<section><section id="_a_demotivating_example"><h2>A (de)motivating example</h2></section><section id="_my_idea"><h2>My idea</h2><div class="slide-content"><div class="ulist"><ul><li class="fragment"><p>OSS clone of Reddit</p></li><li class="fragment"><p>Scala 2.13</p></li><li class="fragment"><p>Cats + Cats Effect 2 + FS2 + Http4s</p></li><li class="fragment"><p>Monix as IO, TaskLocal for MDC</p></li><li class="fragment"><p>Tapir</p></li><li class="fragment"><p>Jsoniter</p></li><li class="fragment"><p>Scala Newtype</p></li></ul></div></div></section><section><div class="slide-content"><div class="ulist"><ul><li class="fragment"><p>March 2021 - last commit</p></li><li class="fragment"><p>everything works</p></li><li class="fragment"><p>September 2022 - updated dependencies</p></li><li class="fragment"><p>migration took about 2-3 weeks</p></li></ul></div></div></section><section id="_why"><h2>Why?</h2></section><section id="_cats_effect_2_to_3"><h2>Cats Effect 2 to 3</h2></section><section><div class="slide-content"><div class="listingblock"><div class="content"><pre class="highlightjs highlight"><code class="language-scala hljs" data-noescape="true" data-lang="scala">def myModule[F[_] : ConcurrentEffect
                   : ContextShift
                   : Timer]: Resource[F, MyModule] = ...
 
@@ -426,19 +426,17 @@ someIO.unsafeRunSync()</code></pre></div></div>
 
 import cats.effect.unsafe.implicits.global
 someIO.unsafeRunSync()</code></pre></div></div>
-<aside class="notes"><div class="paragraph"><p>Nice for new users, worse for existing users.</p></div></aside></div></section><section id="_monix_and_tasklocal"><h2>Monix and TaskLocal</h2><div class="slide-content"><div class="listingblock"><div class="content"><pre class="highlightjs highlight"><code class="language-scala hljs" data-noescape="true" data-lang="scala">import monix.execution.misc.Local
-
-// Solution described by OlegPy in https://olegpy.com/better-logging-monix-1/
+<aside class="notes"><div class="paragraph"><p>Nice for new users, worse for existing users.</p></div></aside></div></section><section><div class="slide-content"><div class="paragraph"><p>Also:</p></div>
+<div class="ulist"><ul><li class="fragment"><p>forced updated of libraries which depended on CE: FS2, Http4s, Doobie</p></li><li class="fragment"><p>there is no Monix for Cats Effect 3 ATM</p></li></ul></div></div></section><section id="_monix_and_local"><h2>Monix and <code>Local</code></h2></section><section><div class="slide-content"><div class="listingblock"><div class="content"><pre class="highlightjs highlight"><code class="language-scala hljs" data-noescape="true" data-lang="scala">// Based on https://olegpy.com/better-logging-monix-1/
 final class MonixMDCAdapter extends LogbackMDCAdapter {
-  private[this] val map = Local[ju.Map[String, String]](ju.Collections.emptyMap())
-
+  private val map = monix.execution.misc.Local(
+    java.util.Collections.emptyMap[String, String]())
   // methods delegating to map
 }
 object MonixMDCAdapter {
-
-  // Initialize MDC.mdcAdapter (with default scope) to our implementation.
   def configure(): Unit = {
-    val field = classOf[org.slf4j.MDC].getDeclaredField("mdcAdapter")
+    val field = classOf[org.slf4j.MDC]
+      .getDeclaredField("mdcAdapter")
     field.setAccessible(true)
     field.set(null, new MonixMDCAdapter)
   }
@@ -446,19 +444,46 @@ object MonixMDCAdapter {
 <div class="listingblock"><div class="content"><pre class="highlightjs highlight"><code class="language-scala hljs" data-noescape="true" data-lang="scala">// set up Logback
 MonixMDCAdapter.configure()
 // propagating changes to Local within Task
-task.executeWithOptions(_.enableLocalContextPropagation)</code></pre></div></div></div></section><section><div class="slide-content"><div class="listingblock"><div class="content"><pre class="highlightjs highlight"><code class="language-scala hljs" data-noescape="true" data-lang="scala">private val threadLocal: ThreadLocal[scala.collection.immutable.Map[IOLocal[_], Any]] =
-    ThreadLocal.withInitial(() =&gt; scala.collection.immutable.Map.empty[IOLocal[_], Any])
-
-def configureStatePropagation(tc: Async[IO]): Async[IO] = new Async[IO] {
-  // extract IOLocal and set it in threadLocal in every operation which might use it
-}</code></pre></div></div></div></section><section id="_http4s"><h2>Http4s</h2><div class="slide-content"><div class="listingblock"><div class="content"><pre class="highlightjs highlight"><code class="language-scala hljs" data-noescape="true" data-lang="scala">import org.http4s.server.blaze.BlazeServerBuilder
+task.executeWithOptions(_.enableLocalContextPropagation)</code></pre></div></div></div></section><section><div class="slide-content"><div class="listingblock"><div class="content"><pre class="highlightjs highlight"><code class="language-scala hljs" data-noescape="true" data-lang="scala">object IOGlobal {
+  private val threadLocal = ThreadLocal.withInitial(
+    () =&gt; Map.empty[IOLocal[_], Any]
+  )
+  // IOLocalHack.get : IO[Map.empty[IOLocal[_], Any]]
+  def propagateState[A](thunk: =&gt; IO[A]): IO[A] =
+    IOLocalHack.get.flatMap { state =&gt;
+      threadLocal.set(state); thunk }
+}</code></pre></div></div>
+<div class="listingblock"><div class="content"><pre class="highlightjs highlight"><code class="language-scala hljs" data-noescape="true" data-lang="scala">def configureAsync(tc: Async[IO]) = new Async[IO] {
+  // extract IOLocal and set it in threadLocal
+  // in every operation which might use it
+  def suspend[A](hint: Sync.Type)(thunk: =&gt; A) =
+    tc.suspend(hint)(propagateState(tc.pure(thunk))).flatten
+  def handleErrorWith[A](fa: IO[A])(f: Throwable =&gt; IO[A]) =
+    tc.handleErrorWith(fa)(e =&gt; propagateState(f(e)))
+  def flatMap[A, B](fa: IO[A])(f: A =&gt; IO[B]) =
+    tc.flatMap(fa)(a =&gt; propagateState(f(a)))
+  def tailRecM[A, B](a: A)(f: A =&gt; IO[Either[A, B]]) =
+    tc.tailRecM(a)(b =&gt; propagateState(f(b)))
+  // and plain redirect to tc for everythin else
+}</code></pre></div></div></div></section><section id="_fs2_kafka"><h2>FS2 Kafka</h2><div class="slide-content"><div class="listingblock"><div class="content"><pre class="highlightjs highlight"><code class="language-scala hljs" data-noescape="true" data-lang="scala">type EventBusProducer[F[_], Event] = Pipe[
+  F,
+  (UUID, Event),
+  ProducerResult[UUID, Event, Unit]
+]</code></pre></div></div>
+<div class="listingblock"><div class="content"><pre class="highlightjs highlight"><code class="language-scala hljs" data-noescape="true" data-lang="scala">// changed the order of parameters in ProducerResult
+type EventBusProducer[F[_], Event] = Pipe[
+  F,
+  (UUID, Event),
+  ProducerResult[Unit, UUID, Event] // &lt;-- here
+]</code></pre></div></div></div></section><section id="_http4s"><h2>Http4s</h2><div class="slide-content"><div class="listingblock"><div class="content"><pre class="highlightjs highlight"><code class="language-scala hljs" data-noescape="true" data-lang="scala">import org.http4s.server.blaze.BlazeServerBuilder
 import org.http4s.util.{ CaseInsensitiveString =&gt; CIString }</code></pre></div></div>
 <div class="listingblock"><div class="content"><pre class="highlightjs highlight"><code class="language-scala hljs" data-noescape="true" data-lang="scala">// Blaze moved to a separate dependency
 import org.http4s.blaze.server.BlazeServerBuilder
 // CIString became deprecated alias
-import org.typelevel.ci.CIString</code></pre></div></div>
+import org.typelevel.ci.CIString</code></pre></div></div></div></section><section><div class="slide-content"><div class="paragraph"><p>TODO</p></div>
 <div class="ulist"><ul><li><p>Tapir 0.x to 1.x</p></li><li><p>added new type parameter (representing auth)</p></li><li><p>changed the format of configs</p></li></ul></div></div></section></section>
-<section id="_other_examples_from_history"><h2>Other Examples from History</h2></section>
+<section><section id="_other_examples_from_history"><h2>Other Examples from History</h2></section><section id="_scala_2_12_to_2_13"><h2>Scala 2.12 to 2.13</h2><div class="slide-content"><div class="paragraph"><p>TODO</p></div></div></section><section id="_happy_experiments"><h2>Happy experiments</h2><div class="slide-content"><div class="ulist"><ul><li class="fragment"><p><code>scala-parallel-collections</code></p></li><li class="fragment"><p><code>scala-parser-combinators</code></p></li><li class="fragment"><p><code>scala-continuations</code></p></li></ul></div>
+<aside class="notes"><div class="paragraph"><p>Still present in old textbooks. Usually, you move proven things into standard library, not kick them off inside it and then move out.</p></div></aside></div></section><section id="_neverending_0_x_version"><h2>Neverending 0.x version</h2><div class="slide-content"><div class="ulist"><ul><li class="fragment"><p>TODO</p></li></ul></div></div></section><section id="_major_version_update"><h2>Major version update</h2><div class="slide-content"><div class="ulist"><ul><li class="fragment"><p>TODO</p></li></ul></div></div></section><section id="_monad_of_the_season"><h2>Monad of the season</h2><div class="slide-content"><div class="ulist"><ul><li class="fragment"><p>TODO</p></li></ul></div></div></section></section>
 <section id="_what_can_we_do_about_it"><h2>What Can We Do About It?</h2></section>
 <section id="_summary"><h2>Summary</h2></section>
 <section id="_thank_you"><h2>Thank You!</h2></section></div></div><script src="./reveal.js/dist/reveal.js"></script><script>Array.prototype.slice.call(document.querySelectorAll('.slides section')).forEach(function(slide) {
